force-app/main/default/objects/LLC_BI__LoanRenewal__c/LLC_BI__LoanRenewal__c.object-meta.xml
<CustomObject>
    <description>This junction object connects a base loan with its renewal versions</description>
    <label>LoanRenewal</label>
    <nameField>
        <displayFormat>RL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LoanRenewals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>