force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__DeletedLoanName__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__DeletedLoanName__c</fullName>
    <description>This field holds the name of the loan when it is deleted for history display purposes.</description>
    <label>DeletedLoanName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>