force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__NextRevisionNumber__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__NextRevisionNumber__c</fullName>
    <description>This value holds the next revision number in the linked list. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
    <label>Next Revision Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>