force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__ParentLoanId__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ParentLoanId__c</fullName>
    <description>This field is automatically set and is required. It specifies the Parent Loan Master- Detail relationship, allowing the linking of history of renewals and modifications on the loan records.</description>
    <label>Parent Loan Id</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipName>RenewalJunction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>