force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__PreviousVersionStatus__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__PreviousVersionStatus__c</fullName>
    <description>This holds the status that the previous version was in before this renewal was created. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
    <label>Previous Version Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>