force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__RevisionStatus__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RevisionStatus__c</fullName>
    <defaultValue>&quot;AVAILABLE&quot;</defaultValue>
    <description>This holds the current status of this revision. This field is automatically set by the system. It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
    <label>Revision Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>