force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__RootLoanId__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__RootLoanId__c</fullName>
    <description>This field holds the ID of the Loan object that is at the root of the tree. If this is the root object, this field will be null. This field is automatically  set by the system.  It is used behind the scenes to set the appropriate appendages during the renewal and modification process.</description>
    <label>Root Loan ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>