force-app/main/default/objects/LLC_BI__LoanRenewal__c/fields/LLC_BI__Total_Number_Of_Extended_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Number_Of_Extended_Days__c</fullName>
    <description>The system automatically populates this field to track the total number of days of the parent (booked) loan.</description>
    <label>Total Number of Extended Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>